getProductPerOrder function and addProduct function
